Router upgrade, plus added templates

--- a/views/engineer.ejs
+++ b/views/engineer.ejs
@@ -1,3 +1,4 @@
+<%- include('partials/header'); %>
 <div>
     <h1>Power</h1>
     <button type="button" class="btn btn-danger active-green" data-toggle="button" data-sync="main_power_system" aria-pressed="false"><i class="fa fa-2x fa-power-off"></i></button>
@@ -5,3 +6,4 @@
     <br><br>
     <button type="button" class="btn btn-warning" data-sync="flush_gravity" aria-pressed="false"><i class="fa fa-2x fa-viacoin"></i></button>
 </div>
+<%- include('partials/footer'); %>
