--- a/views/engineer.ejs
+++ b/views/engineer.ejs
@@ -6,4 +6,11 @@
     <br><br>
     <button type="button" class="btn btn-warning" data-sync="flush_gravity" aria-pressed="false"><i class="fa fa-2x fa-viacoin"></i></button>
 </div>
+<div style="margin: 15px;">
+    <div class="range-slider" data-vertical="true"></div>
+    <div class="range-slider" data-vertical="true"></div>
+    <div class="range-slider" data-vertical="true"></div>
+    <div class="range-slider" data-vertical="true"></div>
+</div>
+
 <%- include('partials/footer'); %>
