Add swiping panels to Engineer page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,10 +25,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js"
             crossorigin="anonymous"></script>
     <script src="/js/range-slider.js"></script>
+    <script src="/js/hammer.min.js"></script>
     <script src="/js/global.js"></script>
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid container-<%= role; %>">
     <div id="pause-dialog" class="dropshadow" style="display: none;">
         <div class="dropshadow-background"></div>
         <i class="fa fa-pause-circle"></i>
