--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -57,3 +57,56 @@ $pause_width: 164px;
 		font-size: 12em;
 	}
 }
+
+body, html {
+	height: 100%;
+}
+
+.container-fluid {
+
+	&.container-landscape {
+		@media only screen and (orientation: portrait) {
+			height: 100vw;
+			-webkit-transform: rotate(90deg);
+			-moz-transform: rotate(90deg);
+			transform: rotate(90deg);
+		}
+		@media only screen and (orientation:landscape){
+			-webkit-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			transform: rotate(0deg);
+		}
+	}
+	&.container-engineer {
+		@extend .container-fluid.container-landscape;
+		height: 100%;
+		padding: 0;
+		.card-title {
+			text-align: center;
+		}
+		.cards {
+			height: 100%;
+		}
+		.card {
+			margin-bottom: 0;
+			height: 100%;
+			&:not(:first-child)::before,
+			&:not(:last-child)::after {
+				display: block;
+				content: '';
+				position: absolute;
+				width: 12px;
+				height: 100%;
+				top: 0;
+			}
+			&:not(:first-child)::before {
+				left: 0;
+				background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+			}
+			&:not(:last-child)::after {
+				right: 0;
+				background: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+			}
+		}
+	}
+}
