--- a/views/engineer.ejs
+++ b/views/engineer.ejs
@@ -1,16 +1,27 @@
 <%- include('partials/header'); %>
-<div>
-    <h1>Power</h1>
-    <button type="button" class="btn btn-danger active-green" data-toggle="button" data-sync="main_power_system" aria-pressed="false"><i class="fa fa-2x fa-power-off"></i></button>
-    <button type="button" class="btn btn-danger" data-toggle="button" data-sync="enable_doritos" aria-pressed="false"><i class="fa fa-2x fa-hand-lizard-o"></i></button>
-    <br><br>
-    <button type="button" class="btn btn-warning" data-sync="flush_gravity" aria-pressed="false"><i class="fa fa-2x fa-viacoin"></i></button>
+<div class="cards">
+    <div class="card">
+        <h4 class="card-title">Main Power</h4>
+        <div class="card-block">
+            <div class="range-slider" data-vertical="true"></div>
+            <div class="range-slider" data-vertical="true"></div>
+            <div class="range-slider" data-vertical="true"></div>
+            <div class="range-slider" data-vertical="true"></div>
+        </div>
+    </div>
+    <div class="card">
+        <h4 class="card-title">Buttons</h4>
+        <div class="card-block">
+            <button type="button" class="btn btn-danger active-green" data-toggle="button" data-sync="main_power_system" aria-pressed="false"><i class="fa fa-2x fa-power-off"></i></button>
+            <button type="button" class="btn btn-danger" data-toggle="button" data-sync="enable_doritos" aria-pressed="false"><i class="fa fa-2x fa-hand-lizard-o"></i></button>
+            <br><br>
+            <button type="button" class="btn btn-warning" data-sync="flush_gravity" aria-pressed="false"><i class="fa fa-2x fa-viacoin"></i></button>
+        </div>
+    </div>
+    <div class="card">
+        <h4 class="card-title">Third Panel</h4>
+        <div class="card-block">
+        </div>
+    </div>
 </div>
-<div style="margin: 15px;">
-    <div class="range-slider" data-vertical="true"></div>
-    <div class="range-slider" data-vertical="true"></div>
-    <div class="range-slider" data-vertical="true"></div>
-    <div class="range-slider" data-vertical="true"></div>
-</div>
-
 <%- include('partials/footer'); %>
