--- a/views/engineer.ejs
+++ b/views/engineer.ejs
@@ -19,9 +19,8 @@
         </div>
     </div>
     <div class="card">
-        <h4 class="card-title">Third Panel</h4>
-        <div class="card-block">
-        </div>
+        <div class="console">&gt; tail -f /var/log/ship/network.log
+</div>
     </div>
 </div>
 <%- include('partials/footer'); %>
