--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,6 +27,7 @@
     <script src="/js/range-slider.js"></script>
     <script src="/js/hammer.min.js"></script>
     <script src="/js/global.js"></script>
+    <script src="/js/<%= role; %>.js"></script>
 </head>
 <body>
 <div class="container-fluid container-<%= role; %>">
