--- a/views/engineer.ejs
+++ b/views/engineer.ejs
@@ -3,10 +3,10 @@
     <div class="card">
         <h4 class="card-title">Main Power</h4>
         <div class="card-block">
-            <div class="range-slider" data-vertical="true"></div>
-            <div class="range-slider" data-vertical="true"></div>
-            <div class="range-slider" data-vertical="true"></div>
-            <div class="range-slider" data-vertical="true"></div>
+            <div class="range-slider" data-vertical="true" data-sync="power1"></div>
+            <div class="range-slider" data-vertical="true" data-sync="power2"></div>
+            <div class="range-slider" data-vertical="true" data-sync="power3"></div>
+            <div class="range-slider" data-vertical="true" data-sync="power4"></div>
         </div>
     </div>
     <div class="card">
