--- a/views/weapons.ejs
+++ b/views/weapons.ejs
@@ -1,4 +1,53 @@
 <%- include('partials/header'); %>
-Pew pew!
-<img src="http://i.huffpost.com/gen/3508130/images/o-GUN-facebook.jpg" width="100%">
+<canvas id="canvas" width="480" height="320"></canvas>
+    <div style="height: 30px">
+      <div id="gamma" style="width: 100px">gamma</div>
+      <div id="alpha" style="width: 100px">alpha</div>
+      <div id="beta" style="width: 100px">beta</div>
+    </div>
+    <script src="js/gyro.min.js"></script>
+    <script>
+      var canvas = document.getElementById("canvas");
+      var ctx = canvas.getContext("2d");
+      var reticle = {
+        x: 240,
+        y: 160,
+        sizeX: 10,
+        sizeY: 10
+      };
+      gyro.frequency = 20;
+      gyro.startTracking(function(o){
+        //The alpha value seems to change when the gamma value switches between negative and positive
+        if(o.gamma > 0){
+          reticle.x = 480 - (Math.floor(o.alpha)/360) * 480;
+          $('#gamma').text('gammaP: ' + Math.floor(o.gamma));
+        }
+        else{
+          reticle.x = 480 - ((Math.floor(o.alpha)/360) * 480) + 240;
+          $('#gamma').text('gammaN: ' + Math.floor(o.gamma));
+          //This is dumb figure out why it does this
+          if(reticle.x > 480){
+            reticle.x -= 480;
+          }
+        }
+
+        //Top half
+        if(o.gamma > 0){
+          reticle.y = (Math.floor(o.gamma) + 1)/90 * 160;
+        }
+        //Bottom half
+        else{
+          reticle.y = -((Math.floor(Math.abs(o.gamma)))/90 * 160) + 320;
+        }
+
+        ctx.fillStyle = "black";
+        ctx.fillRect(0, 0, 480, 320);
+
+        ctx.fillStyle = "red";
+        ctx.fillRect(reticle.x - (reticle.sizeX/2), reticle.y - (reticle.sizeY/2), reticle.sizeX, reticle.sizeY);
+
+        $('#alpha').text('alpha: ' + Math.floor(reticle.x));
+        $('#beta').text('beta: ' + Math.floor(o.beta));
+      });
+    </script>
 <%- include('partials/footer'); %>
