--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,3 +35,4 @@
         <div class="dropshadow-background"></div>
         <i class="fa fa-pause-circle"></i>
     </div>
+    <button type="button" class="btn btn-link lobby-button"><i class="fa fa-hand-o-left"></i></button>
