--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,6 +26,7 @@
             crossorigin="anonymous"></script>
     <script src="/js/range-slider.js"></script>
     <script src="/js/hammer.min.js"></script>
+    <script src="/js/gyro.js"></script>
     <script src="/js/global.js"></script>
     <script src="/js/<%= role; %>.js"></script>
 </head>
