Split ClientNet class off of global.ts; rename to client.ts

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,10 +20,10 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/tether.min.js"></script>
     <script src="/js/bootstrap.js"></script>
-    <script src="/js/range-slider.js"></script>
     <script src="/js/hammer.min.js"></script>
     <script src="/js/gyro.js"></script>
-    <script src="/js/global.js"></script>
+
+    <script src="/js/client.js"></script>
     <script src="/js/<%= role; %>.js"></script>
 </head>
 <body>
