--- a/assets/scss/_robotics.scss
+++ b/assets/scss/_robotics.scss
@@ -6,8 +6,24 @@ $tile_size: 64px;
 	padding: 0;
 }
 
-.background-ship {
+.ship {
 	background: url("/images/ship_robot_background.png") center center/100% 100% no-repeat black;
 	height: 640px;
 	width: 960px;
+}
+
+.robot {
+	background: url("/images/robot.png") center center/100% 100% no-repeat;
+	width: $tile_size;
+	height: $tile_size;
+	position: absolute;
+	.fa-spin {
+		font-size: 4em;
+		color: rgba(3, 193, 49, 0.6);
+	}
+	&:not(.selected) {
+		.fa-spin {
+			display: none;
+		}
+	}
 }
