Added starfield generation and rendering.

--- a/views/weapons.ejs
+++ b/views/weapons.ejs
@@ -1,8 +1,7 @@
 <%- include('partials/header'); %>
-<canvas id="canvas" width="480" height="320"></canvas>
-    <div style="height: 30px">
-      <div id="gamma" style="width: 100px">gamma</div>
-      <div id="alpha" style="width: 100px">alpha</div>
-      <div id="beta" style="width: 100px">beta</div>
-    </div>
+<div class="weapons">
+    <div id="weaponsCanvas"></div>
+    <div id="gamma" style="width: 100px; color: white; position: fixed; top: 0px; right: 25px;">CG:</div>
+    <div id="alpha" style="width: 100px; color: white; position: fixed; top: 20px; right: 25px;">CA:</div>
+</div>
 <%- include('partials/footer'); %>
