Added navigator stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,5 +3,5 @@
 <a class="btn btn-secondary" href="engineer" style="margin: 15px;">Engineer</a><br>
 <a class="btn btn-secondary" href="robotics" style="margin: 15px;">Robotics Expert</a><br>
 <a class="btn btn-secondary" href="weapons" style="margin: 15px;">Weapons</a><br>
-<a class="btn btn-secondary" href="navigation" style="margin: 15px;">Navigation</a><br>
+<a class="btn btn-secondary" href="navigator" style="margin: 15px;">Navigation</a><br>
 <%- include('partials/footer'); %>
