Added Captain role; improved List buttons

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -85,6 +85,12 @@ body, html {
 		}
 	}
 }
+.container-list {
+	@import '_list';
+}
+.container-captain {
+	@import '_captain';
+}
 .container-weapons {
 	@import '_weapons';
 }
