--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,25 @@
 <%- include('partials/header'); %>
 <h1>Project Space Couch</h1>
-<a class="btn btn-secondary" href="engineer" style="margin: 15px;">Engineer</a><br>
-<a class="btn btn-secondary" href="robotics" style="margin: 15px;">Robotics Expert</a><br>
-<a class="btn btn-secondary" href="weapons" style="margin: 15px;">Weapons</a><br>
-<a class="btn btn-secondary" href="navigator" style="margin: 15px;">Navigation</a><br>
+<div class="card-columns">
+	<a class="card card-block" href="captain">
+		<h4 class="card-title">Captain</h4>
+		<p class="card-text">Ensures smooth communication between crew.</p>
+	</a>
+	<a class="card card-block" href="engineer">
+		<h4 class="card-title">Engineer</h4>
+		<p class="card-text">Manages power levels throughout the ship.</p>
+	</a>
+	<a class="card card-block" href="robotics">
+		<h4 class="card-title">Robotics Expert</h4>
+		<p class="card-text">Head of HR - err, well</p>
+	</a>
+	<a class="card card-block" href="weapons">
+		<h4 class="card-title">Weapons</h4>
+		<p class="card-text">Fills the sky with lead - or lasers, as it may be</p>
+	</a>
+	<a class="card card-block" href="navigator">
+		<h4 class="card-title">Navigator</h4>
+		<p class="card-text">Figures out where we are, and where we're going.</p>
+	</a>
+</div>
 <%- include('partials/footer'); %>
