Robotics: Added fires, robot action menu, can extinguish fires

--- a/assets/scss/_robotics.scss
+++ b/assets/scss/_robotics.scss
@@ -1,3 +1,6 @@
+
+@import "_radialMenu";
+
 $tile_size: 64px;
 
 & {
@@ -12,22 +15,57 @@ $tile_size: 64px;
 	width: 960px;
 }
 
-.robot {
-	background: url("/images/robot.png") center center/100% 100% no-repeat;
+.tiled_entity {
 	width: $tile_size;
 	height: $tile_size;
 	position: absolute;
-	.fa-spin {
+	background: center center/100% 100% no-repeat;
+}
+
+.fa-spin {
+	transform-origin: 50% calc(50% - .5px);
+}
+
+.robot {
+	@extend .tiled_entity;
+	background-image: url("/images/robot.png");
+	z-index: 10;
+	.fa-circle-o-notch {
 		font-size: 4em;
 		color: rgba(3, 193, 49, 0.6);
+		pointer-events: none;
+		z-index: 20;
 	}
 	&:not(.selected) {
-		.fa-spin {
+		.fa-circle-o-notch {
 			display: none;
+		}
+	}
+	.robot__busy {
+		position: absolute;
+		top: 24px;
+		left: 22px;
+		color: lime;
+		pointer-events: none;
+		display: none;
+		z-index: 20;
+	}
+	&.busy {
+		.robot__busy {
+			display: initial;
 		}
 	}
 	/* Debateably useful 'force GPU rendering' tricks */
 	-webkit-backface-visibility: hidden;
 	perspective: 1000;
 	transform: translateZ(0);
+}
+
+.fire {
+	@extend .tiled_entity;
+	z-index: 15;
+	background-image: url("/images/fire.gif");
+	background-size: 80%;
+	opacity: 0.75;
+	pointer-events: none;
 }
