--- a/views/engineer.ejs
+++ b/views/engineer.ejs
@@ -16,6 +16,7 @@
             <button type="button" class="btn btn-danger" data-toggle="button" data-sync="enable_doritos" aria-pressed="false"><i class="fa fa-2x fa-hand-lizard-o"></i></button>
             <br><br>
             <button type="button" class="btn btn-warning" data-sync="flush_gravity" aria-pressed="false"><i class="fa fa-2x fa-viacoin"></i></button>
+            <button type="button" class="btn btn-warning" data-sync="start_generator_fire"><i class="fa fa-2x fa-fire"></i></button>
         </div>
     </div>
     <div class="card">
