--- a/views/robotics.ejs
+++ b/views/robotics.ejs
@@ -1,4 +1,12 @@
 <%- include('partials/header'); %>
+<div class="radial-overlay"></div>
+<ul id="robot-actions" class="radial-menu">
+	<li data-type="extinguish"><i class="fa fa-3x fa-fire-extinguisher"></i></li>
+	<li data-type="repair"><i class="fa fa-3x fa-cogs"></i></li>
+	<li data-type="improve"><i class="fa fa-3x fa-wrench"></i></li>
+	<li><i class="fa fa-3x fa-asl-interpreting"></i></li>
+	<li><i class="fa fa-3x fa-wheelchair-alt"></i></li>
+</ul>
 <div class="ship">
 </div>
 <%- include('partials/footer'); %>
