--- a/assets/scss/_list.scss
+++ b/assets/scss/_list.scss
@@ -3,6 +3,11 @@
 }
 .card-block {
 	padding: 1rem;
+	&:focus,
+	&:hover {
+		text-decoration: none;
+		background-color: #ccc;
+	}
 }
 .card-text {
 	font-size: 0.75em;
