--- a/views/engineer.ejs
+++ b/views/engineer.ejs
@@ -17,6 +17,7 @@
             <br><br>
             <button type="button" class="btn btn-warning" data-sync="flush_gravity" aria-pressed="false"><i class="fa fa-2x fa-viacoin"></i></button>
             <button type="button" class="btn btn-warning" data-sync="start_generator_fire"><i class="fa fa-2x fa-fire"></i></button>
+            <button type="button" class="btn btn-warning" data-sync="break_shields"><i class="fa fa-2x fa-ban"></i></button>
         </div>
     </div>
     <div class="card">
