--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,13 +21,14 @@
     <script src="/js/tether.min.js"></script>
     <script src="/js/bootstrap.js"></script>
     <script src="/js/hammer.min.js"></script>
+    <script src="/js/jquery.overscroll.js"></script>
     <script src="/js/gyro.js"></script>
 
     <script src="/js/client.js"></script>
     <script src="/js/<%= role; %>.js"></script>
 </head>
 <body>
-<div class="container-fluid container-<%= role; %>">
+<div class="main-container container-<%= role; %>">
     <div id="pause-dialog" class="dropshadow" style="display: none;">
         <div class="dropshadow-background"></div>
         <i class="fa fa-pause-circle"></i>
