Engineer: Add temperature gauge widget

--- a/views/engineer.ejs
+++ b/views/engineer.ejs
@@ -7,6 +7,17 @@
             <div class="range-slider" data-vertical="true" data-sync="power2"></div>
             <div class="range-slider" data-vertical="true" data-sync="power3"></div>
             <div class="range-slider" data-vertical="true" data-sync="power4"></div>
+            <div class="gaugewrap">
+                <div class="gauge">
+                    <div class="dial">
+                        <div class="indicator"></div>
+                        <i></i>
+                        <div class="dialbase">
+                            <output>0</output>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="card">
