--- a/src/roles/Engineer/_rangeSlider.scss
+++ b/src/roles/Engineer/_rangeSlider.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/compass-mixins/lib/_compass";
+@import '../../../node_modules/compass-mixins/lib/compass';
 
 $knob-size: 3;
 
@@ -7,7 +7,8 @@ $knob-size: 3;
 	display: inline-block;
 	width: #{$knob-size}rem;
 	height: 100%;
-	background: linear-gradient(135deg,
+	background: linear-gradient(
+			135deg,
 			rgba(76, 89, 103, 0.5) 0%,
 			rgba(108, 108, 147, 0.5) 20%,
 			rgba(98, 109, 132, 0.5) 23%,
@@ -15,10 +16,10 @@ $knob-size: 3;
 			rgba(112, 126, 194, 0.5) 45%,
 			rgba(96, 96, 159, 0.5) 75%,
 			rgba(54, 57, 73, 0.5) 90%,
-			rgba(19, 25, 32, 0.5) 100%),
+			rgba(19, 25, 32, 0.5) 100%
+		),
 		linear-gradient(to bottom, #000000, #808080, #000000),
-		linear-gradient(to right, #000000, #808080, #000000)
-	;
+		linear-gradient(to right, #000000, #808080, #000000);
 	border-radius: 1rem;
 	padding: #{$knob-size / 2}rem 0;
 	text-align: center;
@@ -35,8 +36,16 @@ $knob-size: 3;
 	width: #{$knob-size / 4}rem;
 	height: 100%;
 	border-radius: 1rem;
-	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5), 0 1px 0 1px rgba(153, 153, 153, 0.5), inset 0 2px 1px 1px rgba(0, 0, 0, 0.75);
-	background: linear-gradient(to right, transparent 45%, #111 50%, transparent 55%), linear-gradient(to bottom, #2b303b, #4c5567, #21242c);
+	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5),
+		0 1px 0 1px rgba(153, 153, 153, 0.5),
+		inset 0 2px 1px 1px rgba(0, 0, 0, 0.75);
+	background: linear-gradient(
+			to right,
+			transparent 45%,
+			#111 50%,
+			transparent 55%
+		),
+		linear-gradient(to bottom, #2b303b, #4c5567, #21242c);
 
 	.dragger {
 		position: absolute;
@@ -46,11 +55,10 @@ $knob-size: 3;
 		border-radius: 50%;
 		left: 50%;
 		transform: translate(-50%, 0);
-		background: linear-gradient(150deg, #AAA, #555);
-		box-shadow: inset 1px 2px 0 1px hsla(0, 0, 80%, .7),
-			inset 0 0 1px 2px #333,
-			-3px 8px 1px -1px hsla(0, 0, 0, .4),
-			6px 16px 3px -2px hsla(0, 0, 0, .25);
+		background: linear-gradient(150deg, #aaa, #555);
+		box-shadow: inset 1px 2px 0 1px hsla(0, 0, 80%, 0.7),
+			inset 0 0 1px 2px #333, -3px 8px 1px -1px hsla(0, 0, 0, 0.4),
+			6px 16px 3px -2px hsla(0, 0, 0, 0.25);
 
 		&:after {
 			content: '';
@@ -62,9 +70,16 @@ $knob-size: 3;
 			top: 0.5rem;
 			left: 0.5rem;
 			box-shadow: 0 1px 0 1px #999;
-			border-bottom: 1px solid #DDD;
+			border-bottom: 1px solid #ddd;
 			border-top: 1px solid #111;
-			background: repeating-radial-gradient(circle farthest-side at center, transparent 0px, transparent 4px, #222 4px, #111 5px), linear-gradient(to bottom, #222, #AAA);
+			background: repeating-radial-gradient(
+					circle farthest-side at center,
+					transparent 0px,
+					transparent 4px,
+					#222 4px,
+					#111 5px
+				),
+				linear-gradient(to bottom, #222, #aaa);
 		}
 	}
 }
