--- a/src/roles/List/RoleList.scss
+++ b/src/roles/List/RoleList.scss
@@ -1,8 +1,14 @@
 .container-list {
 	padding: 10px;
 
+	.card-columns {
+		display: flex;
+		flex-wrap: wrap;
+	}
 	.card {
 		color: black;
+		width: calc(33.3333% - 0.5rem);
+		margin: 0.25rem;
 	}
 	.card-block {
 		padding: 1rem;
