--- a/src/roles/Robotics/Robotics.scss
+++ b/src/roles/Robotics/Robotics.scss
@@ -12,8 +12,8 @@ $tile_size: 64px;
 		background: url('/images/ship_robot_background.png') center center/100%
 			100% no-repeat black;
 		position: relative;
-		height: 640px;
-		width: 960px;
+		width: $tile_size * 15;
+		height: $tile_size * 10;
 	}
 
 	.tiled_entity {
