--- a/src/roles/Robotics/StarCanvas.scss
+++ b/src/roles/Robotics/StarCanvas.scss
@@ -1,5 +1,8 @@
 .StarCanvas {
 	position: fixed;
+	@media screen and (min-width: 1200px) {
+		position: absolute;
+	}
 	z-index: -1;
 	height: 100%;
 	width: 100%;
