--- a/src/roles/Engineer/Console.scss
+++ b/src/roles/Engineer/Console.scss
@@ -4,6 +4,7 @@
 	font-weight: bold;
 	font-family: monospace;
 	font-size: 14px;
+	line-height: 21px;
 	border: 0;
 	padding: 10px;
 	padding-bottom: 0;
