--- a/src/global.scss
+++ b/src/global.scss
@@ -1,10 +1,33 @@
 body,
 html {
 	height: 100%;
+	margin: 0;
+}
+html {
+	font-size: 16px;
+	box-sizing: border-box;
+}
+* {
+	box-sizing: inherit;
+}
+img {
+	vertical-align: middle;
+}
+body {
+	font-size: 1rem;
+	line-height: 1.5rem;
+	font-family: Arial, sans-serif;
 }
 
 #root {
 	height: 100%;
+}
+
+a {
+	&,
+	&:hover {
+		text-decoration: none;
+	}
 }
 
 $pause_width: 164px;
@@ -86,4 +109,7 @@ $pause_width: 164px;
 }
 .width-100 {
 	width: 100%;
+}
+.text-center {
+	text-align: center;
 }
