--- a/src/roles/List/RoleList.scss
+++ b/src/roles/List/RoleList.scss
@@ -1,5 +1,5 @@
 .container-list {
-	padding: 10px;
+	padding: 1em;
 
 	.card-tiles {
 		display: flex;
@@ -10,15 +10,12 @@
 		width: calc(33.3333% - 0.5rem);
 		margin: 0.25rem;
 	}
-	.card-block {
-		padding: 1rem;
+	.MuiCard-root {
+		transition: background-color 0.2s;
+		height: 100%;
 		&:focus,
 		&:hover {
-			text-decoration: none;
 			background-color: #ccc;
 		}
-	}
-	.card-text {
-		font-size: 0.75em;
 	}
 }
