Added ship selector to role list

--- a/src/roles/List/RoleList.scss
+++ b/src/roles/List/RoleList.scss
@@ -18,4 +18,12 @@
 			background-color: #ccc;
 		}
 	}
+
+	.selector-container {
+		padding-left: 1em;
+
+		.MuiNativeSelect-root {
+			min-width: 8em;
+		}
+	}
 }
