--- a/src/global.scss
+++ b/src/global.scss
@@ -96,7 +96,15 @@ $pause_width: 164px;
 		box-shadow: 5px 5px 20px black;
 		margin: 50px;
 		border: 2px solid black;
-		overflow: hidden;
+		overflow: auto;
+		-ms-overflow-style: none; /* Internet Explorer 10+ */
+		scrollbar-width: none; /* Firefox */
+		&::-webkit-scrollbar {
+			display: none; /* Safari and Chrome */
+		}
+	}
+	html {
+		height: auto;
 	}
 }
 
