--- a/src/global.scss
+++ b/src/global.scss
@@ -72,6 +72,7 @@ $pause_width: 164px;
 
 .main-container {
 	height: 100%;
+	position: relative;
 }
 .lights-off {
 	background-color: black;
@@ -106,6 +107,21 @@ $pause_width: 164px;
 	html {
 		height: auto;
 	}
+}
+
+.fullscreen-button-container {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.6);
+	z-index: 1;
+}
+.fullscreen-button {
+	position: absolute;
+	left: calc(50% - 148px / 2);
+	top: calc(50% - 42px / 2);
 }
 
 // Helper Classes
