--- a/src/roles/Robotics/Robotics.scss
+++ b/src/roles/Robotics/Robotics.scss
@@ -104,5 +104,10 @@ $tile_size: 64px;
 	.ship-subsystem {
 		@extend .tiled_entity;
 		pointer-events: none;
+
+		&.thruster {
+			transform: translateX(-50%);
+			filter: drop-shadow(0px 1px 1px rgba(244, 247, 249, 0.75));
+		}
 	}
 }
